--- a/nginx-cors.conf
+++ b/nginx-cors.conf
@@ -1,31 +1,8 @@
-# CORS headers for Tauben Scanner Proxy Host
-location / {
-    # Add CORS headers
-    add_header 'Access-Control-Allow-Origin' 'https://tauben-scanner.fugjoo.duckdns.org' always;
-    add_header 'Access-Control-Allow-Origin' 'capacitor://localhost' always;
-    add_header 'Access-Control-Allow-Origin' 'http://localhost' always;
-    add_header 'Access-Control-Allow-Origin' 'http://localhost:8100' always;
-    add_header 'Access-Control-Allow-Origin' 'http://localhost:5173' always;
-    add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
-    add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization' always;
-    add_header 'Access-Control-Allow-Credentials' 'true' always;
+# Nginx Proxy Configuration for Tauben Scanner
+# CORS is handled by Express backend (app.ts) - DO NOT add CORS headers here!
 
-    # Handle preflight requests
-    if ($request_method = 'OPTIONS') {
-        add_header 'Access-Control-Allow-Origin' 'https://tauben-scanner.fugjoo.duckdns.org';
-        add_header 'Access-Control-Allow-Origin' 'capacitor://localhost';
-        add_header 'Access-Control-Allow-Origin' 'http://localhost';
-        add_header 'Access-Control-Allow-Origin' 'http://localhost:8100';
-        add_header 'Access-Control-Allow-Origin' 'http://localhost:5173';
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
-        add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
-        add_header 'Access-Control-Allow-Credentials' 'true';
-        add_header 'Access-Control-Max-Age' 1728000;
-        add_header 'Content-Type' 'text/plain; charset=utf-8';
-        add_header 'Content-Length' 0;
-        return 204;
-    }
-    
-    # Proxy!
+location / {
+    # Proxy all requests to backend
+    # Backend handles CORS via cors() middleware
     include conf.d/include/proxy.conf;
 }
