--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,8 +27,10 @@
     "@capacitor/geolocation": "^8.1.0",
     "@capacitor/preferences": "^8.0.1",
     "@hookform/resolvers": "^5.2.2",
+    "@tanstack/react-query": "^5.90.21",
     "@types/react": "^19.2.14",
     "@types/react-dom": "^19.2.3",
+    "axios": "^1.13.5",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-hook-form": "^7.71.2",
