T6: Implement Home Screen Dashboard
Features:
- Complete HomeScreen with statistics, quick actions, and recent sightings
- New components: StatCard, QuickActionButton, RecentSightings, OfflineIndicator
- React Query integration (usePigeons, useSightings hooks)
- Pull-to-refresh functionality
- Offline indicator with animated network status
- Real-time sync status display (synced/syncing/pending)
- Navigation integration for quick actions (Scan, Pigeons)
- Type-safe navigation prop types
- React Native compatible StoreProvider with NetInfo

Fixes:
- Updated icon names to use valid MaterialCommunityIcons
- Added missing hooks implementations
- Fixed TypeScript compilation issues
- Made compatible with React Native environment

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@capacitor/android": "^8.1.0",
+    "@react-native-community/netinfo": "^11.3.0",
     "@capacitor/camera": "^8.0.1",
     "@capacitor/cli": "^8.1.0",
     "@capacitor/core": "^8.1.0",
