T9: Implementiere Settings Screen
Features:
- Erweitere SettingsStore um Theme (light/dark/system), Language (de/en) und Offline-Modus
- Implementiere testApiConnection() Methode für API-Verbindungstest
- Erstelle SettingItem Komponente für einzeilige Einstellungen mit Icon
- Erstelle SettingToggle Komponente für Switch-basierte Einstellungen
- Erstelle SettingInput Komponente für Texteingaben mit Validierung
- Überarbeite SettingsScreen mit:
  - API URL Konfiguration mit Validierung und Test-Button
  - Theme Toggle (Light/Dark/System) mit Modal
  - Sprache (Deutsch/Englisch) mit Modal
  - Offline-Modus Toggle mit AutoSync-Dependency
  - Über / Versions-Info
  - Dark Mode Support mit dynamischen Styles
  - Einstellungen persistieren via MMKV

Akzeptanzkriterien:
- API URL speichert und lädt korrekt ✓
- Theme wechselt sofort ✓
- Einstellungen persistieren (MMKV) ✓
- Validierung zeigt Fehler ✓
- Versions-Info sichtbar ✓

Closes #26

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,7 @@
     "expo-status-bar": "~55.0.4",
     "expo-vector-icons": "^10.0.1",
     "react": "19.2.0",
-    "react-dom": "^19.2.4",
+    "react-dom": "19.2.0",
     "react-hook-form": "^7.71.2",
     "react-native": "0.83.2",
     "react-native-mmkv": "^4.1.2",
