fix: update package.json for Expo SDK 51 + React Native

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,47 +1,49 @@
 {
-  "name": "tauben-scanner-frontend",
+  "name": "tauben-scanner-mobile",
   "version": "1.0.0",
-  "description": "KI Tauben Scanner - Capacitor React App",
-  "type": "module",
+  "main": "expo/AppEntry.js",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "android": "npm run build && npx cap sync android && npx cap open android",
-    "sync": "npx cap sync android",
-    "ios": "echo 'iOS not configured'"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "build:android": "eas build -p android --profile production"
   },
-  "keywords": [
-    "capacitor",
-    "react",
-    "pigeon-scanner"
-  ],
-  "author": "OpenFugjooBot",
-  "license": "MIT",
   "dependencies": {
-    "@capacitor/android": "^8.1.0",
-    "@capacitor/camera": "^8.0.1",
-    "@capacitor/cli": "^8.1.0",
-    "@capacitor/core": "^8.1.0",
-    "@capacitor/geolocation": "^8.1.0",
-    "@capacitor/preferences": "^8.0.1",
-    "@hookform/resolvers": "^5.2.2",
-    "@tanstack/react-query": "^5.90.21",
-    "@tanstack/react-query-devtools": "^5.91.3",
-    "@types/react": "^19.2.14",
-    "@types/react-dom": "^19.2.3",
-    "react": "^19.2.4",
-    "react-dom": "^19.2.4",
-    "react-hook-form": "^7.71.2",
-    "react-native-mmkv": "^4.1.2",
-    "react-router-dom": "^7.13.1",
-    "zod": "^4.3.6",
-    "zustand": "^5.0.11"
+    "expo": "~51.0.0",
+    "expo-camera": "~15.0.0",
+    "expo-constants": "~16.0.0",
+    "expo-file-system": "~17.0.0",
+    "expo-image-manipulator": "~12.0.0",
+    "expo-localization": "~15.0.0",
+    "expo-location": "~17.0.0",
+    "expo-splash-screen": "~0.27.0",
+    "expo-status-bar": "~1.12.0",
+    "react": "18.2.0",
+    "react-native": "0.74.0",
+    "react-native-gesture-handler": "~2.16.0",
+    "react-native-reanimated": "~3.10.0",
+    "react-native-safe-area-context": "4.10.0",
+    "react-native-screens": "~3.31.0",
+    "@react-navigation/native": "^7.0.0",
+    "@react-navigation/bottom-tabs": "^7.0.0",
+    "@react-navigation/stack": "^7.0.0",
+    "@react-navigation/native-stack": "^7.0.0",
+    "@expo/vector-icons": "^14.0.0",
+    "react-native-paper": "^5.0.0",
+    "react-native-mmkv": "^3.0.0",
+    "@tanstack/react-query": "^5.0.0",
+    "zustand": "^5.0.0",
+    "axios": "^1.7.0",
+    "react-hook-form": "^7.52.0",
+    "zod": "^3.23.0",
+    "@hookform/resolvers": "^3.9.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^5.1.4",
-    "typescript": "^5.9.3",
-    "vite": "^7.3.1"
-  }
+    "@babel/core": "^7.24.0",
+    "@types/react": "~18.2.0",
+    "@types/react-native": "~0.74.0",
+    "typescript": "~5.3.0"
+  },
+  "private": true
 }
