--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,8 +23,8 @@
     "react-native": "0.74.0",
     "react-native-gesture-handler": "~2.16.0",
     "react-native-reanimated": "~3.10.0",
-    "react-native-safe-area-context": "4.10.0",
-    "react-native-screens": "~3.31.0",
+    "react-native-safe-area-context": "^5.0.0",
+    "react-native-screens": "^4.0.0",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/stack": "^7.0.0",
