--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,16 @@
     "build:android": "eas build -p android --profile production"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.0",
+    "@hookform/resolvers": "^3.9.0",
+    "@react-navigation/bottom-tabs": "^6.5.0",
+    "@react-navigation/native": "^6.1.0",
+    "@react-navigation/native-stack": "^6.9.0",
+    "@react-navigation/stack": "^6.3.0",
+    "@tanstack/react-query": "^5.0.0",
+    "axios": "^1.7.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
     "expo": "^51.0.0",
     "expo-camera": "~15.0.0",
     "expo-constants": "~16.0.0",
@@ -19,6 +29,7 @@
     "expo-splash-screen": "~0.27.0",
     "expo-status-bar": "~1.12.0",
     "react": "18.2.0",
+    "react-hook-form": "^7.52.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.0",
     "react-native-mmkv": "2.12.2",
@@ -26,16 +37,8 @@
     "react-native-reanimated": "~3.10.0",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.0",
-    "@expo/vector-icons": "^14.0.0",
-    "@react-navigation/bottom-tabs": "^6.5.0",
-    "@react-navigation/native": "^6.1.0",
-    "@react-navigation/native-stack": "^6.9.0",
-    "@react-navigation/stack": "^6.3.0",
-    "@tanstack/react-query": "^5.0.0",
-    "axios": "^1.7.0",
-    "react-hook-form": "^7.52.0",
+    "stream-browserify": "^3.0.0",
     "zod": "^3.23.0",
-    "@hookform/resolvers": "^3.9.0",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
