chore: remove OpenClaw workspace files
Entfernt versehentlich committete OpenClaw-Dateien:
- .openclaw/ Verzeichnis
- AGENTS.md, BOOTSTRAP.md, HEARTBEAT.md, IDENTITY.md, SOUL.md
- TOOLS.md, USER.md, WORKFLOW.md
- memory/ Verzeichnis

Hinweis: Diese Dateien sollten im OpenClaw-Workspace bleiben,
nicht im Projekt-Repository.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
 frontend/node_modules/
+
+# OpenClaw workspace files
+.openclaw/
+AGENTS.md
+BOOTSTRAP.md
+HEARTBEAT.md
+IDENTITY.md
+SOUL.md
+TOOLS.md
+USER.md
+WORKFLOW.md
+memory/
