fix: add write permissions and conditional release

--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -4,10 +4,17 @@ on:
   push:
     branches: [main]
   workflow_dispatch:
+    inputs:
+      create_release:
+        type: boolean
+        description: "Create GitHub Release"
+        default: false
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # Für Release Upload
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -39,7 +46,7 @@ jobs:
           chmod +x gradlew
           ./gradlew assembleRelease
 
-      - name: Upload APK
+      - name: Upload APK Artifact
         uses: actions/upload-artifact@v4
         with:
           name: tauben-scanner-apk
@@ -47,7 +54,7 @@ jobs:
           retention-days: 30
 
       - name: Create Release
-        if: github.ref == 'refs/heads/main'
+        if: github.event.inputs.create_release == 'true'
         uses: softprops/action-gh-release@v2
         with:
           files: frontend/android/app/build/outputs/apk/release/app-release.apk
