--- a/frontend/app.json
+++ b/frontend/app.json
@@ -14,7 +14,11 @@
     "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.openfugjoobot.taubenscanner"
+      "bundleIdentifier": "com.openfugjoobot.taubenscanner",
+      "infoPlist": {
+        "NSCameraUsageDescription": "Die Kamera wird verwendet, um Tauben zu fotografieren und zu identifizieren.",
+        "NSLocationWhenInUseUsageDescription": "Der Standort wird verwendet, um den Fundort der Taube zu speichern."
+      }
     },
     "android": {
       "package": "com.openfugjoobot.taubenscanner",
@@ -25,11 +29,22 @@
         "backgroundImage": "./assets/android-icon-background.png",
         "monochromeImage": "./assets/android-icon-monochrome.png"
       },
+      "permissions": [
+        "android.permission.CAMERA",
+        "android.permission.ACCESS_FINE_LOCATION",
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.READ_EXTERNAL_STORAGE",
+        "android.permission.WRITE_EXTERNAL_STORAGE"
+      ],
       "predictiveBackGestureEnabled": false
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
+    "plugins": [
+      "expo-camera",
+      "expo-location"
+    ],
     "extra": {
       "eas": {
         "projectId": "tauben-scanner"
