--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "tauben-scanner-rn",
-    "slug": "tauben-scanner-rn",
+    "name": "mobile",
+    "slug": "mobile",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -12,11 +12,7 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true,
-      "infoPlist": {
-        "NSCameraUsageDescription": "Die Kamera wird verwendet, um Fotos von Tauben aufzunehmen.",
-        "NSPhotoLibraryUsageDescription": "Zugriff auf die Galerie für Taubenfotos."
-      }
+      "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
@@ -25,23 +21,10 @@
         "backgroundImage": "./assets/android-icon-background.png",
         "monochromeImage": "./assets/android-icon-monochrome.png"
       },
-      "predictiveBackGestureEnabled": false,
-      "permissions": [
-        "android.permission.CAMERA",
-        "android.permission.RECORD_AUDIO"
-      ]
+      "predictiveBackGestureEnabled": false
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    },
-    "plugins": [
-      [
-        "expo-camera",
-        {
-          "cameraPermission": "Die Kamera wird verwendet, um Fotos von Tauben aufzunehmen.",
-          "microphonePermission": "Mikrofonzugriff wird für Videoaufnahmen benötigt."
-        }
-      ]
-    ]
+    }
   }
 }
