--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tauben-scanner-rn",
+  "name": "mobile",
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
@@ -10,16 +10,38 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.1.1",
+    "@hookform/resolvers": "^5.2.2",
+    "@react-navigation/bottom-tabs": "^7.15.2",
+    "@react-navigation/native": "^7.1.31",
+    "@react-navigation/native-stack": "^7.14.2",
+    "@tanstack/react-query": "^5.90.21",
+    "axios": "^1.13.5",
+    "date-fns": "^4.1.0",
     "expo": "~55.0.2",
-    "expo-camera": "^15.0.16",
-    "expo-linking": "^55.0.7",
+    "expo-camera": "^55.0.9",
+    "expo-file-system": "^55.0.9",
+    "expo-image-manipulator": "^55.0.9",
+    "expo-location": "^55.1.2",
     "expo-status-bar": "~55.0.4",
     "react": "19.2.0",
+    "react-hook-form": "^7.71.2",
     "react-native": "0.83.2",
+    "react-native-gesture-handler": "^2.30.0",
+    "react-native-mmkv": "^4.1.2",
+    "react-native-paper": "^5.15.0",
+    "react-native-reanimated": "^4.2.2",
+    "react-native-safe-area-context": "^5.7.0",
+    "react-native-screens": "^4.24.0",
+    "zod": "^4.3.6",
     "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@types/react": "~19.2.2",
+    "@types/react-native": "^0.72.8",
+    "@typescript-eslint/eslint-plugin": "^8.56.1",
+    "@typescript-eslint/parser": "^8.56.1",
+    "eslint": "^10.0.2",
+    "prettier": "^3.8.1",
     "typescript": "~5.9.2"
   },
   "private": true
