fix: downgrade to Expo SDK 52, add folder structure with .gitkeep

--- a/mobile/.env.example
+++ b/mobile/.env.example
@@ -1,3 +1,12 @@
-EXPO_PUBLIC_API_URL=https://api.example.com
-EXPO_PUBLIC_STORAGE_KEY=your_key_here
+# API Configuration
+EXPO_PUBLIC_API_URL=http://localhost:3000/api
+
+# Storage Encryption Key (32+ characters recommended)
+EXPO_PUBLIC_STORAGE_KEY=your-secure-storage-key-change-in-production
+
+# Sentry DSN (optional, for error tracking)
 EXPO_PUBLIC_SENTRY_DSN=
+
+# Feature Flags
+EXPO_PUBLIC_ENABLE_DEBUG_MODE=false
+EXPO_PUBLIC_ENABLE_OFFLINE_MODE=true
