--- a/mobile/package.json
+++ b/mobile/package.json
@@ -17,15 +17,15 @@
     "@tanstack/react-query": "^5.90.21",
     "axios": "^1.13.5",
     "date-fns": "^4.1.0",
-    "expo": "~55.0.2",
-    "expo-camera": "^55.0.9",
-    "expo-file-system": "^55.0.9",
-    "expo-image-manipulator": "^55.0.9",
-    "expo-location": "^55.1.2",
-    "expo-status-bar": "~55.0.4",
-    "react": "19.2.0",
+    "expo": "~52.0.0",
+    "expo-camera": "~16.0.0",
+    "expo-file-system": "~18.0.0",
+    "expo-image-manipulator": "~13.0.0",
+    "expo-location": "~18.0.0",
+    "expo-status-bar": "~2.0.0",
+    "react": "^18.3.1",
     "react-hook-form": "^7.71.2",
-    "react-native": "0.83.2",
+    "react-native": "^0.76.0",
     "react-native-gesture-handler": "^2.30.0",
     "react-native-mmkv": "^4.1.2",
     "react-native-paper": "^5.15.0",
@@ -36,7 +36,7 @@
     "zustand": "^5.0.11"
   },
   "devDependencies": {
-    "@types/react": "~19.2.2",
+    "@types/react": "~18.3.0",
     "@types/react-native": "^0.72.8",
     "@typescript-eslint/eslint-plugin": "^8.56.1",
     "@typescript-eslint/parser": "^8.56.1",
