--- a/mobile/eas.json
+++ b/mobile/eas.json
@@ -1,4 +1,7 @@
 {
+  "cli": {
+    "version": ">= 5.0.0"
+  },
   "build": {
     "development": {
       "developmentClient": true,
@@ -10,6 +13,13 @@
         "buildType": "apk"
       }
     },
+    "production": {
+      "android": {
+        "buildType": "apk"
+      }
+    }
+  },
+  "submit": {
     "production": {}
   }
 }
