--- a/mobile/package.json
+++ b/mobile/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@expo/vector-icons": "^15.1.1",
     "@hookform/resolvers": "^5.2.2",
+    "@react-native-community/slider": "^5.1.2",
     "@react-navigation/bottom-tabs": "^7.15.2",
     "@react-navigation/native": "^7.1.31",
     "@react-navigation/native-stack": "^7.14.2",
@@ -27,11 +28,13 @@
     "expo-file-system": "~18.0.0",
     "expo-image-manipulator": "~13.0.0",
     "expo-location": "~18.0.0",
+    "expo-media-library": "~17.0.6",
     "expo-status-bar": "~2.0.0",
     "react": "^18.3.1",
     "react-hook-form": "^7.71.2",
     "react-native": "^0.76.0",
     "react-native-gesture-handler": "^2.30.0",
+    "react-native-maps": "1.18.0",
     "react-native-mmkv": "^4.1.2",
     "react-native-paper": "^5.15.0",
     "react-native-reanimated": "^4.2.2",
