--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,33 +17,47 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Setup Expo
-        uses: expo/expo-github-action@v8
+      - name: Setup Java 17
+        uses: actions/setup-java@v4
         with:
-          eas-version: latest
-          token: ${{ secrets.EXPO_TOKEN }}
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v3
+
+      - name: Accept Android licenses
+        run: yes | sdkmanager --licenses || true
 
       - name: Install dependencies
         run: cd mobile && npm ci --legacy-peer-deps
 
-      - name: Check EAS configuration
+      - name: Create env file
         run: |
           cd mobile
-          which eas
-          eas --version
-          cat eas.json
+          echo "EXPO_PUBLIC_API_URL=${{ secrets.EXPO_PUBLIC_API_URL || 'https://api.example.com/api/v1' }}" > .env
+          echo "EXPO_PUBLIC_STORAGE_KEY=${{ secrets.EXPO_PUBLIC_STORAGE_KEY || 'default-key' }}" >> .env
 
-      - name: Build with EAS
+      - name: Prebuild Android
+        run: cd mobile && npx expo prebuild --platform android --clean
+
+      - name: Make gradlew executable
+        run: chmod +x mobile/android/gradlew
+
+      - name: Build APK with Gradle
         run: |
-          cd mobile
-          eas build --platform android --profile production --non-interactive --json
-        env:
-          EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
+          cd mobile/android
+          ./gradlew assembleRelease --no-daemon --stacktrace
 
       - name: Upload APK
-        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: tauben-scanner-apk
-          path: mobile/*.apk
+          path: mobile/android/app/build/outputs/apk/release/app-release.apk
           retention-days: 30
+
+      - name: Build Summary
+        if: success()
+        run: |
+          echo "✅ Build successful!"
+          ls -lh mobile/android/app/build/outputs/apk/release/
