--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,51 +17,32 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Setup Java 17
-        uses: actions/setup-java@v4
+      - name: Setup Expo
+        uses: expo/expo-github-action@v8
         with:
-          distribution: 'temurin'
-          java-version: '17'
-
-      - name: Setup Android SDK
-        uses: android-actions/setup-android@v3
-
-      - name: Accept Android licenses
-        run: yes | sdkmanager --licenses || true
+          eas-version: latest
+          token: ${{ secrets.EXPO_TOKEN }}
 
       - name: Install dependencies
+        run: cd mobile && npm ci --legacy-peer-deps
+
+      - name: Build APK with EAS
+        id: eas_build
         run: |
           cd mobile
-          npm ci --legacy-peer-deps
+          BUILD_OUTPUT=$(eas build --platform android --profile production --non-interactive --json | tee /dev/stderr)
+          echo "build_output=$BUILD_OUTPUT" >> $GITHUB_OUTPUT
 
-      - name: Create env file
+      - name: Download APK from EAS
         run: |
           cd mobile
-          echo "EXPO_PUBLIC_API_URL=${{ secrets.EXPO_PUBLIC_API_URL || 'https://api.example.com/api/v1' }}" > .env
-          echo "EXPO_PUBLIC_STORAGE_KEY=${{ secrets.EXPO_PUBLIC_STORAGE_KEY || 'default-key' }}" >> .env
-
-      - name: Prebuild Android
-        run: |
-          cd mobile
-          npx expo prebuild --platform android --clean
-
-      - name: Make gradlew executable
-        run: chmod +x mobile/android/gradlew
-
-      - name: Build APK with Gradle
-        run: |
-          cd mobile/android
-          ./gradlew assembleRelease --no-daemon
+          BUILD_ID=$(echo '${{ steps.eas_build.outputs.build_output }}' | jq -r '.id')
+          echo "Build ID: $BUILD_ID"
+          eas build:download --id "$BUILD_ID" --platform android
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: tauben-scanner-apk
-          path: mobile/android/app/build/outputs/apk/release/app-release.apk
+          path: "*.apk"
           retention-days: 30
-
-      - name: Build Summary
-        if: success()
-        run: |
-          echo "✅ Build successful!"
-          ls -lh mobile/android/app/build/outputs/apk/release/
