--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,18 @@ jobs:
         with:
           node-version: '20'
 
+      - name: Setup Java 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v3
+
+      - name: Accept Android licenses
+        run: yes | sdkmanager --licenses || true
+
       - name: Setup Expo
         uses: expo/expo-github-action@v8
         with:
@@ -26,23 +38,14 @@ jobs:
       - name: Install dependencies
         run: cd mobile && npm ci --legacy-peer-deps
 
-      - name: Build APK with EAS
-        id: eas_build
+      - name: Build APK (local EAS)
         run: |
           cd mobile
-          BUILD_OUTPUT=$(eas build --platform android --profile production --non-interactive --json | tee /dev/stderr)
-          echo "build_output=$BUILD_OUTPUT" >> $GITHUB_OUTPUT
-
-      - name: Download APK from EAS
-        run: |
-          cd mobile
-          BUILD_ID=$(echo '${{ steps.eas_build.outputs.build_output }}' | jq -r '.id')
-          echo "Build ID: $BUILD_ID"
-          eas build:download --id "$BUILD_ID" --platform android
+          eas build --platform android --profile production --local --non-interactive --output tauben-scanner.apk
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: tauben-scanner-apk
-          path: "*.apk"
+          path: "mobile/tauben-scanner.apk"
           retention-days: 30
