ci: EAS init vor dem Build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,22 +17,14 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Setup Java 17
-        uses: actions/setup-java@v4
+      - name: Setup Expo
+        uses: expo/expo-github-action@v8
         with:
-          distribution: 'temurin'
-          java-version: '17'
-
-      - name: Setup Android SDK
-        uses: android-actions/setup-android@v3
-
-      - name: Accept Android licenses
-        run: yes | sdkmanager --licenses || true
+          eas-version: latest
+          token: ${{ secrets.EXPO_TOKEN }}
 
       - name: Install dependencies
-        run: |
-          cd mobile
-          npm ci --legacy-peer-deps
+        run: cd mobile && npm ci --legacy-peer-deps
 
       - name: Create env file
         run: |
@@ -40,29 +32,25 @@ jobs:
           echo "EXPO_PUBLIC_API_URL=https://api.example.com/api/v1" > .env
           echo "EXPO_PUBLIC_STORAGE_KEY=default-key" >> .env
 
-      - name: Prebuild Android
+      - name: EAS Init
         run: |
           cd mobile
-          npx expo prebuild --platform android --clean
+          eas init --force --non-interactive || true
 
-      - name: Fix Android build.gradle
+      - name: Build APK with EAS
         run: |
-          cd mobile/android
-          # Add mavenCentral und Expo repo
-          sed -i 's/google()/mavenCentral()\n        google()/' build.gradle
-          sed -i '/google()/a\        maven { url "https://maven.pkg.jetbrains.space/public/p/kotlinx-coroutines/maven" }' build.gradle
+          cd mobile
+          eas build --platform android --profile production --non-interactive
 
-      - name: Make gradlew executable
-        run: chmod +x mobile/android/gradlew
-
-      - name: Build APK
+      - name: Download APK
         run: |
-          cd mobile/android
-          ./gradlew assembleRelease --no-daemon
+          cd mobile
+          BUILD_URL=$(eas build:list --platform android --json --limit 1 | jq -r '.[0].artifacts.buildUrl')
+          curl -L "$BUILD_URL" -o tauben-scanner.apk
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: tauben-scanner-apk
-          path: mobile/android/app/build/outputs/apk/release/app-release.apk
+          path: mobile/tauben-scanner.apk
           retention-days: 30
