--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,18 @@ jobs:
         with:
           node-version: '20'
 
+      - name: Setup Java 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v3
+
+      - name: Accept Android licenses
+        run: yes | sdkmanager --licenses || true
+
       - name: Setup Expo
         uses: expo/expo-github-action@v8
         with:
@@ -37,16 +49,10 @@ jobs:
           cd mobile
           eas init --force --non-interactive || true
 
-      - name: Build APK with EAS
+      - name: Build APK (local)
         run: |
           cd mobile
-          eas build --platform android --profile production --non-interactive
-
-      - name: Download APK
-        run: |
-          cd mobile
-          BUILD_URL=$(eas build:list --platform android --json --limit 1 | jq -r '.[0].artifacts.buildUrl')
-          curl -L "$BUILD_URL" -o tauben-scanner.apk
+          eas build --platform android --profile production --local --non-interactive --output tauben-scanner.apk
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
