UI: Implement custom extended splash screen with branding and 4s duration

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -9,8 +9,7 @@
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff",
-      "duration": 3000
+      "backgroundColor": "#ffffff"
     },
     "ios": {
       "supportsTablet": true,
