--- a/mobile/package.json
+++ b/mobile/package.json
@@ -29,6 +29,7 @@
     "expo-file-system": "~18.0.0",
     "expo-font": "~13.0.0",
     "expo-image-manipulator": "~13.0.0",
+    "expo-image-picker": "~16.0.0",
     "expo-location": "~18.0.0",
     "expo-media-library": "~17.0.6",
     "expo-status-bar": "~2.0.0",
