Build: Fix Splash UI consistency, bump version to 1.0.1, and harden permission hook

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -2,14 +2,15 @@
   "expo": {
     "name": "Tauben Scanner",
     "slug": "tauben-scanner",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
+    "backgroundColor": "#FFFFFF",
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#FFFFFF"
     },
     "ios": {
       "supportsTablet": true,
