--- a/mobile/package.json
+++ b/mobile/package.json
@@ -17,7 +17,7 @@
     "@expo/vector-icons": "~14.0.4",
     "@hookform/resolvers": "^5.2.2",
     "@miblanchard/react-native-slider": "^2.6.0",
-    "@react-native-community/netinfo": "11.4.1",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native-community/slider": "4.5.5",
     "@react-navigation/bottom-tabs": "^7.15.2",
     "@react-navigation/native": "^7.1.31",
