--- a/mobile/app.json
+++ b/mobile/app.json
@@ -44,6 +44,18 @@
     },
     "plugins": [
       [
+        "expo-splash-screen",
+        {
+          "backgroundColor": "#FFFFFF",
+          "image": "./assets/splash-icon.png",
+          "resizeMode": "contain",
+          "dark": {
+            "backgroundColor": "#FFFFFF",
+            "image": "./assets/splash-icon.png"
+          }
+        }
+      ],
+      [
         "expo-camera",
         {
           "cameraPermission": "Tauben Scanner benötigt Zugriff auf Ihre Kamera, um Tauben zu scannen."
