--- a/mobile/package.json
+++ b/mobile/package.json
@@ -34,6 +34,7 @@
     "expo-image-picker": "~16.0.0",
     "expo-location": "~18.0.0",
     "expo-media-library": "~17.0.6",
+    "expo-splash-screen": "^55.0.10",
     "expo-status-bar": "~2.0.0",
     "react": "^18.3.1",
     "react-hook-form": "^7.71.2",
