fix(camera): Resolve camera UI/UX issues #78, #79, #82, #83, #77
Fix Camera UI z-index/overlay (Issue #78):
- Add Platform-selective elevation for Android controls
- Add pointerEvents='box-none' to overlay container
- Use StyleSheet.absoluteFillObject for proper positioning
- Ensure tappable controls on Android with zIndex/elevation

Fix Camera Zoom control (Issue #79):
- Fix slider value handling with proper numeric extraction
- Add debouncing (300ms) for zoom state updates
- Add zoom level indicator showing 0.1x-2.0x values
- Include zoom percentage display

Fix Camera type state (Issue #82):
- Add facing indicator showing 'Rückseite'/'Frontkamera'
- Verify camera type on capture via EXIF data
- Reset zoom on camera switch
- Fix wrong camera after capture bug

Add Error Handling (Issue #83):
- Add cameraError state management
- Add permission denied UI with open settings button
- Add retry button on error with clearError function
- Error boundary for photo processing with proper error messages

Create/Update mobile/.env.example (Issue #77):
- Document all required environment variables
- Add comprehensive comments for each variable
- Include EAS build profiles example in eas.json
- Add build environments: development, preview, production

--- a/mobile/.env.example
+++ b/mobile/.env.example
@@ -1,12 +1,107 @@
+# ============================================
+# Tauben Scanner - Mobile Configuration
+# ============================================
+# Copy this file to .env and update the values
+# Requires rebuild after changing build-time values
+#
+# NOTE: Variables prefixed with EXPO_PUBLIC_ are available in JavaScript
+# without rebuild. Other variables require a new build.
+# ============================================
+
+# -------------------------------------------
 # API Configuration
+# -------------------------------------------
+# URL of the Tauben Scanner API
+# Examples:
+#   - Development: http://localhost:3000/api
+#   - LAN development: http://192.168.1.100:3000/api
+#   - Staging: https://staging.tauben-scanner.example.com/api
+#   - Production: https://api.tauben-scanner.example.com/api
 EXPO_PUBLIC_API_URL=http://localhost:3000/api
 
-# Storage Encryption Key (32+ characters recommended)
-EXPO_PUBLIC_STORAGE_KEY=your-secure-storage-key-change-in-production
+# Default API Key (optional, for dev builds only)
+# The actual API key should be configured in the app settings
+# Format: taube_<random_hex>
+# EXPO_PUBLIC_DEFAULT_API_KEY=taube_dev_key_123
 
-# Sentry DSN (optional, for error tracking)
-EXPO_PUBLIC_SENTRY_DSN=
+# -------------------------------------------
+# Security & Storage
+# -------------------------------------------
+# Encryption key for local storage (SQLite/AsyncStorage)
+# MUST be 32+ characters for AES-256 encryption
+# Generate with: openssl rand -base64 32
+# WARNING: Changing this will invalidate existing stored data!
+EXPO_PUBLIC_STORAGE_KEY=your-secure-storage-key-change-in-production-min-32-characters
 
+# -------------------------------------------
+# Sentry Error Tracking (Optional)
+# -------------------------------------------
+# DSN from Sentry.io for crash reporting
+# Leave empty to disable error tracking
+# EXPO_PUBLIC_SENTRY_DSN=https://xxxxxx@xxxxx.ingest.sentry.io/xxxxxx
+
+# Sentry environment tag
+# EXPO_PUBLIC_SENTRY_ENVIRONMENT=development
+
+# -------------------------------------------
 # Feature Flags
+# -------------------------------------------
+# Enable debug logging and developer tools
 EXPO_PUBLIC_ENABLE_DEBUG_MODE=false
+
+# Enable offline mode capabilities (caching, sync)
 EXPO_PUBLIC_ENABLE_OFFLINE_MODE=true
+
+# -------------------------------------------
+# Analytics (Optional)
+# -------------------------------------------
+# Google Analytics Measurement ID
+# EXPO_PUBLIC_GA_MEASUREMENT_ID=G-XXXXXXXXXX
+
+# Amplitude API Key
+# EXPO_PUBLIC_AMPLITUDE_API_KEY=xxxxxxxxxx
+
+# -------------------------------------------
+# OCR Configuration (Optional)
+# -------------------------------------------
+# Google Vision API key for text recognition
+# If not set, falls back to on-device OCR
+# EXPO_PUBLIC_GOOGLE_VISION_API_KEY=your-api-key
+
+# -------------------------------------------
+# Map Configuration (Optional)
+# -------------------------------------------
+# Mapbox or Google Maps API key
+# EXPO_PUBLIC_MAPBOX_ACCESS_TOKEN=pk.xxxxxxxxx
+# EXPO_PUBLIC_GOOGLE_MAPS_API_KEY=your-api-key
+
+# ============================================
+# EAS Build Configuration
+# ============================================
+# These values are used by EAS CLI for builds
+# ============================================
+
+# EAS Project ID (from app.json or eas.json)
+# EAS_PROJECT_ID=xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
+
+# Build profile override (defaults to 'production')
+# EAS_BUILD_PROFILE=development
+
+# Build number override
+# EAS_BUILD_NUMBER=1
+
+# ============================================
+# Required Dependencies
+# ============================================
+# This app requires these environment variables to function:
+#
+# MANDATORY:
+#   - EXPO_PUBLIC_API_URL
+#   - EXPO_PUBLIC_STORAGE_KEY (32+ chars)
+#
+# OPTIONAL but recommended:
+#   - EXPO_PUBLIC_SENTRY_DSN (for production)
+#
+# For full configuration guide, see:
+# https://github.com/openfugjoobot/tauben-scanner/blob/main/mobile/README.md
+# ============================================
