--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,6 +5,15 @@ DATABASE_URL=postgresql://tauben:your_secure_password@localhost:5432/tauben_scan
 PORT=3000
 NODE_ENV=production
 
+# API Key Authentication (REQUIRED for production)
+# Generate with: node scripts/generate-api-key.js
+API_KEY=your_secure_api_key_here_min_32_characters
+
+# Rate Limiting Configuration
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
+RATE_LIMIT_UPLOAD_MAX=10
+
 # CORS Configuration (comma-separated list of allowed origins)
 # For local development:
 CORS_ORIGINS=http://localhost:5173,http://localhost:3000
@@ -12,5 +21,9 @@ CORS_ORIGINS=http://localhost:5173,http://localhost:3000
 # CORS_ORIGINS=capacitor://localhost,http://localhost
 
 # Security
-# Generate with: openssl rand -base64 32
+# JWT_SECRET is used if you need JWT tokens in addition to API keys
 JWT_SECRET=your_jwt_secret_here
+
+# Health Check Configuration
+# Set to true to require API key for health endpoints (default: false)
+REQUIRE_AUTH_FOR_HEALTH=false
